# Neural-Networks-From-Scratch

./: .gitmodules  CMakeLists.txt  README.md  digits_recognition.cpp  digits_recognition.h  example_task.cpp  example_task.h  main.cpp
Model/: definitions.h  file_reader.h  model.cpp  model.h  rng.cpp  rng.h
Model/ActivationFunction/: activation_function.cpp  activation_function.h  predefined.cpp  predefined.h  relu.cpp  sigmoid.cpp
Model/DistanceFunction/: distance_function.h  euklidean_squared_distance.cpp
Model/Layer/: layer.cpp  layer.h
Model/LossFunction/: loss_function.h  predefined.cpp  predefined.h
Model/PenaltyFunction/: euklidean_squared_distance.cpp  penalty_function.h
Model/SigmaFunction/: relu.cpp  sigma_function.h  sigmoid.cpp
